deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: quarkus-app
  namespace: my-app
  labels:
    app: quarkus-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus-app
  template:
    metadata:
      namespace: my-app
      labels:
        app: quarkus-app
    spec:
      volumes:
        - name: client-cert
          secret:
            secretName: client-cert
            defaultMode: 420
            optional: false
      containers:
        - resources: {}
          name: quarkus-app
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
          terminationMessagePolicy: File
          image: 'quay.io/agarwasa/security-openid-connect-web-authentication-quickstart:latest'
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
kind: Service
apiVersion: v1
metadata:
  name: quarkus-app-service
  namespace: my-app
  labels:
    app: quarkus-app
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    app: quarkus-app
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    route.openshift.io/termination: edge
  name: quarkus-app-ingress
  namespace: my-app
  labels:
    app: quarkus-app

spec:
  host: quarkus-app.apps.sauaga.eastus.aroapp.io
  to:
    kind: Service
    name: quarkus-app-service
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
